--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/app.js",
-    "forever": "forever start src/app.js"
+    "forever": "forever start src/mesacontrol.js"
   },
   "author": "",
   "license": "ISC",
