--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "**Edit a file, create a new file, and clone from Bitbucket in under 2 minutes**",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "nodemon src/mesacontrol.js",
     "forever": "forever start src/mesacontrol.js"
   },
   "author": "",
